--- a/Resources/Private/Language/locallang_indexer.xlf
+++ b/Resources/Private/Language/locallang_indexer.xlf
@@ -6,6 +6,15 @@
 			<trans-unit id="title">
 				<source>Index generator for calendar base recurring events</source>
 			</trans-unit>
+			<trans-unit id="mlang_tabs_tab ">
+				<source>Cal Indexer</source>
+			</trans-unit>
+			<trans-unit id="mlang_labels_tabdescr ">
+				<source>Index recurring events for calendar base</source>
+			</trans-unit>
+			<trans-unit id="mlang_labels_tablabel ">
+				<source>Index recurring events for calendar base</source>
+			</trans-unit>
 			<trans-unit id="function1">
 				<source>Information</source>
 			</trans-unit>
