--- a/Resources/Private/Language/locallang_indexer.xlf
+++ b/Resources/Private/Language/locallang_indexer.xlf
@@ -1,84 +1,83 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="EXT:cal/Resources/Private/Language/locallang_indexer.xlf" date="2022-04-05T11:47:43Z" product-name="cal">
-		<header />
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+	<file source-language="en" datatype="plaintext" original="messages" date="2022-06-29T05:35:17Z" product-name="cal">
+		<header/>
 		<body>
-			<trans-unit id="title">
+			<trans-unit id="title" resname="title" >
 				<source>Index generator for calendar base recurring events</source>
 			</trans-unit>
-			<trans-unit id="mlang_tabs_tab ">
-				<source>Cal Indexer</source>
-			</trans-unit>
-			<trans-unit id="mlang_labels_tabdescr ">
-				<source>Index recurring events for calendar base</source>
-			</trans-unit>
-			<trans-unit id="mlang_labels_tablabel ">
-				<source>Index recurring events for calendar base</source>
-			</trans-unit>
-			<trans-unit id="function1">
+			<trans-unit id="function1" resname="function1" >
 				<source>Information</source>
 			</trans-unit>
-			<trans-unit id="function2">
+			<trans-unit id="function2" resname="function2" >
 				<source>Generate</source>
 			</trans-unit>
-			<trans-unit id="notice_header">
+			<trans-unit id="notice_header" resname="notice_header" >
 				<source>Welcome</source>
 			</trans-unit>
-			<trans-unit id="notice">
-				<source>&lt;div align=center&gt;&lt;strong&gt;Notice header&lt;/strong&gt;&lt;/div&gt;&lt;BR&gt;Before you proceed, please read carefully:</source>
+			<trans-unit id="notice" resname="notice" xml:space="preserve">
+				<source>&lt;div align=center&gt;&lt;strong&gt;Notice
+				header&lt;/strong&gt;&lt;/div&gt;&lt;BR&gt;Before you proceed,
+				please read carefully:</source>
 			</trans-unit>
-			<trans-unit id="capabilities_header">
+			<trans-unit id="capabilities_header" resname="capabilities_header" >
 				<source>Capabilities of this tool</source>
 			</trans-unit>
-			<trans-unit id="capabilities">
-				<source>This tool will create an index for all recurring tx_cal_event and tx_cal_exception_event instances.</source>
+			<trans-unit id="capabilities" resname="capabilities" xml:space="preserve">
+				<source>This tool will create an index for all recurring
+				tx_cal_event and tx_cal_exception_event instances.</source>
 			</trans-unit>
-			<trans-unit id="tableHeader1">
+			<trans-unit id="tableHeader1" resname="tableHeader1" >
 				<source>Page/Folder</source>
 			</trans-unit>
-			<trans-unit id="tableHeader2">
+			<trans-unit id="tableHeader2" resname="tableHeader2" >
 				<source>Frontend Page with calendar plugin</source>
 			</trans-unit>
-			<trans-unit id="nothingToDo">
+			<trans-unit id="nothingToDo" resname="nothingToDo" >
 				<source>No event / exception event records found</source>
 			</trans-unit>
-			<trans-unit id="browse">
+			<trans-unit id="browse" resname="browse" >
 				<source>Browse for records</source>
 			</trans-unit>
-			<trans-unit id="submit">
+			<trans-unit id="submit" resname="submit" >
 				<source>Submit</source>
 			</trans-unit>
-			<trans-unit id="selectPage">
-				<source>Select the page where the typoscript of calendar base can be found. This should be a normal frontend page.</source>
+			<trans-unit id="selectPage" resname="selectPage" xml:space="preserve">
+				<source>Select the page where the typoscript of calendar
+				base can be found. This should be a normal frontend page.</source>
 			</trans-unit>
-			<trans-unit id="indexStart">
-				<source>Index start (YYYYMMDD or a dynamic value like: -3 month, -2 years)</source>
+			<trans-unit id="indexStart" resname="indexStart" xml:space="preserve">
+				<source>Index start (YYYYMMDD or a dynamic value like: -3
+				month, -2 years)</source>
 			</trans-unit>
-			<trans-unit id="indexEnd">
-				<source>Index end (YYYYMMDD or a dynamic value like: +5 month, +4 years)</source>
+			<trans-unit id="indexEnd" resname="indexEnd" xml:space="preserve">
+				<source>Index end (YYYYMMDD or a dynamic value like: +5
+				month, +4 years)</source>
 			</trans-unit>
-			<trans-unit id="startIndexing">
+			<trans-unit id="startIndexing" resname="startIndexing" >
 				<source>Start indexing</source>
 			</trans-unit>
-			<trans-unit id="atLeastOne">
-				<source>You need to assign at least one frontend page to a found storage places in order to start indexing!</source>
+			<trans-unit id="atLeastOne" resname="atLeastOne" xml:space="preserve">
+				<source>You need to assign at least one frontend page to a
+				found storage places in order to start indexing!</source>
 			</trans-unit>
-			<trans-unit id="notAllPagesAssigned">
-				<source>You need to assign a frontend page to all found storage places in order to start indexing!</source>
+			<trans-unit id="notAllPagesAssigned" resname="notAllPagesAssigned" xml:space="preserve">
+				<source>You need to assign a frontend page to all found
+				storage places in order to start indexing!</source>
 			</trans-unit>
-			<trans-unit id="result">
+			<trans-unit id="result" resname="result" >
 				<source>Result: </source>
 			</trans-unit>
-			<trans-unit id="toBeIndexed">
+			<trans-unit id="toBeIndexed" resname="toBeIndexed" >
 				<source> -&gt; Events to be indexed: </source>
 			</trans-unit>
-			<trans-unit id="droppingTable">
+			<trans-unit id="droppingTable" resname="droppingTable" >
 				<source>Removing events with pid %s from index</source>
 			</trans-unit>
-			<trans-unit id="indexing">
+			<trans-unit id="indexing" resname="indexing" >
 				<source>Indexing</source>
 			</trans-unit>
-			<trans-unit id="back">
+			<trans-unit id="back" resname="back" >
 				<source>Back</source>
 			</trans-unit>
 		</body>
