--- a/Resources/Private/Language/locallang_indexer.xlf
+++ b/Resources/Private/Language/locallang_indexer.xlf
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" datatype="plaintext" original="messages" date="2022-06-29T05:35:17Z" product-name="cal">
+	<file source-language="en" datatype="plaintext" original="messages" date="2022-06-30T09:13:37Z" product-name="cal">
 		<header/>
 		<body>
+			<trans-unit id="mlang_tabs_tab" resname="mlang_tabs_tab" >
+				<source>Cal Indexer</source>
+			</trans-unit>
+			<trans-unit id="mlang_labels_tabdescr" resname="mlang_labels_tabdescr" >
+				<source>Index recurring events for calendar base</source>
+			</trans-unit>
+			<trans-unit id="mlang_labels_tablabel" resname="mlang_labels_tablabel" >
+				<source>Index recurring events for calendar base</source>
+			</trans-unit>
 			<trans-unit id="title" resname="title" >
 				<source>Index generator for calendar base recurring events</source>
 			</trans-unit>
